# pwir

./: .gitignore  Algorithm.cc  Algorithm.hh  CMakeLists.txt  FileHeader.cc  FileHeader.hh  FileReader.cc  FileReader.hh  Makefile  PMISerializable.cc  Point.cc  Point.hh  Sender.cc  Sender.hh  Verbose.cc  Verbose.hh  a.py  bounds.cc  bounds.hh  cli.cc  cli.hh  errors.cc  errors.hh  gal_gen.py  main.cpp  raport.odt  version.hh
common/include/: Algorithm.hh  FileHeader.hh  FileReader.hh  PMISerializable.hh  Point.hh  Verbose.hh  bounds.hh
common/src/: Algorithm.cc  FileReader.cc  Point.cc  bounds.cc  errors.cc
tests/fifty-stars/: gal1.txt  gal2.txt  res1.txt  res2.txt
tests/one-star/: gal1.txt  gal2.txt  res1.txt  res2.txt
